# Darxen

./: .gitignore  AUTHORS  Makefile.am  NEWS  NOTES  README.in  THANKS  TODO  autogen.sh  configure.ac  reconf
doc/: Doxyfile  Feature Delegation.txt  Makefile.am
doc/reference/: Makefile.am
doc/reference/gltk/: Makefile.am
m4/: Makefile.am
src/: Makefile.am
src/android/: .gitignore
src/android/darxen/: .classpath  .gitignore  .project  AndroidManifest.xml  README.md
src/android/darxen/img/: .gitignore
src/android/darxen/jni/shp/: Android.mk  common.c  common.h  dbffile.c  hashtable.c  hashtable.h  inputstreamhooks.c  inputstreamhooks.h  shapefile.c  shapefileobject.c
src/android/darxen/res/layout/: main.xml
src/android/darxen/res/menu/: map.xml
src/android/darxen/res/raw/: counties_dbf.dbf  counties_shp.shp  counties_shx.shx  radars_dbf.dbf  radars_shp.shp  states_shp.shp  states_shx.shx
src/android/darxen/res/values/: strings.xml
src/android/darxen/src/me/kevinwells/darxen/: C.java  Color.java  DataPolicy.java  GestureRecognizer.java  GestureSurface.java  LatLon.java  MapActivity.java  MyApplication.java  Point2D.java  Point3D.java  Prefs.java  RadarMapGestures.java  RadarSite.java  RadarView.java  Renderable.java  ShapefileConfig.java  ShapefileLayer.java  SimpleRenderable.java
src/android/darxen/src/me/kevinwells/darxen/data/: DataFile.java  DataFileStream.java  Description.java  Level3Parser.java  MessageHeader.java  Packet.java  Parsable.java  ParseException.java  ParseMagicException.java  RadialDataPacket.java  RadialPacket.java  SymbologyBlock.java
src/android/darxen/src/me/kevinwells/darxen/shp/: DbfFile.java  Shapefile.java  ShapefileObject.java  ShapefilePoint.java
src/darxen/: .gitignore  DarxenCommon.c  DarxenCommon.h  DarxenConversions.c  DarxenConversions.h  DarxenRenderer.c  DarxenRenderer.h  DarxenRendererShared.c  DarxenRendererShared.h  DarxenSettings.c  DarxenSettings.h  Defaults.xml  Makefile.am  RadarViewer.c  RadarViewer.h  darxen.c  darxen.glade  darxen_ui.glade  frmMain.c  frmMain.h  frmSplash.c  frmSplash.h  gui.glade  lvl3View.c  lvl3View.h  ntbkProducts.c  ntbkProducts.h
src/darxen-cgi/: .gitignore  Makefile.am  darxencgi.c  request.c  request.h  response.h
src/darxen-cli/: .gitignore  Makefile.am  darxencli-old.c  darxencli.c
src/darxen-tablet/: .gitignore  Makefile.am  Shapefiles.xml  Sites.xml  darxen-tablet.c  darxen-tablet.h  darxenaddviewdialog.c  darxenaddviewdialog.h  darxenconfig.c  darxenconfig.h  darxengui.c  darxenmainview.c  darxenmainview.h  darxenpanelmanager.c  darxenpanelmanager.h  darxenradarviewer.c  darxenradarviewer.h  darxensitelist.c  darxensitelist.h  darxenview.c  darxenview.h  darxenviewconfig.c  darxenviewconfig.h
src/darxen-tablet/gltk/: .gitignore  Makefile.am  gltk-base.defs  gltk-types.defs  gltk.defs  gltk.h  gltk.override  gltkbin.c  gltkbin.h  gltkbox.c  gltkbox.h  gltkbutton.c  gltkbutton.h  gltkconfigbutton.c  gltkconfigbutton.h  gltkdialog.c  gltkdialog.h  gltkentry.c  gltkentry.h  gltkevents.c  gltkevents.h  gltkfonts.c  gltkfonts.h  gltkhbox.c  gltkhbox.h  gltkinput.c  gltkinput.h  gltkkeyboard.c  gltkkeyboard.h  gltklabel.c  gltklabel.h  gltklist.c  gltklist.h  gltkmarshal.c  gltkmarshal.h  gltkmarshal.list  gltkminiscreen.c  gltkminiscreen.h  gltkmodule.c  gltkscreen.c  (+23 more)
src/darxen-tablet/gltk/examples/: .gitignore  Makefile.am  buttons  buttons.c  common.c  common.h  controls.py  drag.c  gltkdriver.py  labels  labels.c  lists  lists.c  pytest.py  screens.c  scrollable.c  simple.py  spinners.py  tables.c
src/darxen-tablet/palettes/: reflectivity.palette  reflectivity_cleanair.palette  velocity.palette
src/darxen-tablet/shapefiles/: c_15jl09.shx  radarSites.shx  rs14fe02.shx
src/darxen/Palettes/: Reflectivity.xml  Velocity.xml
src/darxend/: .gitignore  Callbacks.c  Callbacks.h  Client.c  Client.h  ClientManager.c  ClientManager.h  Defaults.xml  FtpConnection.c  FtpConnection.h  FtpDirList.c  FtpDirList.h  Makefile.am  RadarDataManager.c  RadarDataManager.h  Settings.c  Settings.h  TestingCommon.c  TestingCommon.h  darxend.c  darxendWebServiceImp.c  darxend_test.c  restapi.c  restapi.h  soap.h
src/libdarxen/: .gitignore  Darxen.h  DarxenConversions.c  DarxenConversions.h  DarxenDataStructs.c  DarxenDataStructs.h  DarxenParser.c  DarxenParser.h  DarxenParserLevel3.c  DarxenParserLevel3.h  Makefile.am  RadarSites.xml  TestRestfulClient.c  TestingCommon.c  TestingCommon.h  darxenpalettes.c  darxenpalettes.h  darxenrenderer.c  darxenrenderer.h  libdarxen.h  libdarxenClient.c  libdarxenClient.h  libdarxenCommon.h  libdarxenFileSupport.c  libdarxenFileSupport.h  libdarxenPoller.c  libdarxenRadarSites.c  libdarxenRadarSites.h  libdarxenRenderingCommon.c  libdarxenRenderingCommon.h  libdarxenRestfulClient.c  libdarxenRestfulClient.h  libdarxenShapefileRenderer.c  libdarxenShapefileRenderer.h  libdarxenShapefiles.c  libdarxenShapefiles.h  libdarxenXml.c  libdarxenXml.h  libdarxen_test.c  libdarxeninit.c  (+1 more)
src/soap/: Makefile.in  stubs.h
